--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -4,7 +4,7 @@
 <head>
 
     <head>
-        <%- include('partials/head', {title: 'Home' }) %>
+        <%- include('partials/head', {title: 'Detalle de Producto' }) %>
             <link rel="stylesheet" href="/css/productDetail.css">
     </head>
 </head>
@@ -17,7 +17,7 @@
         <section>
             <div class="conteiner">
                 <div class="column1">
-                    <img src="/images/<%= products.images.big %>" alt="">
+                    <img src="/images/<%=products.images.big%>" alt="">
                 </div>
                 <div class="column2">
                     <div class="row1">
