--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include('partials/head', {title: 'Home' }) %>
-        <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
@@ -11,166 +11,28 @@
     <%- include('partials/header-navbar') %>
         <!-- /Header -->
         <main>
-            <section>
-                <div>
-                    <div class="divContenedor">
-                        <article>
-                            <h3>Destinos</h3>
-                            <p>Estos son los destinos destacados en nuestras propuestas de viajes en Argentina y Chile.
-                            </p>
-                        </article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a>
-                        </article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                    </div>
-                    <div class="divContenedor">
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                    </div>
-                    <div class="divContenedor">
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <div class="divContenedor">
-                        <article>
-                            <h3>Estilos de viaje</h3>
-                            <p>Cada quien tiene sus intereses particulares al viajar. Explora en estas secciones para
-                                descubrir la propuesta perfecta para tí.</p>
-                        </article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                    </div>
-                    <div class="divContenedor">
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                    </div>
-                    <div class="divContenedor">
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img">
-                                <div class="banner">
-                                    Perito Moreno
-                                </div>
-                            </a></article>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <div class="divContenedor">
-                        <article>
-                            <h3>Recomendados</h3>
-                            <p>Estos son nuestros viajes recomendados.</p>
-                        </article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img"></a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img"></a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img"></a></article>
-                    </div>
-                    <div class="divContenedor">
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img"></a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img"></a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img"></a></article>
-                        <article> <a href=""><img src="images/PeritoMoreno.jpg" alt="img"></a></article>
-                    </div>
-            </section>
+            
+            <div class="divContenedor">
+                <article>
+                    <h3> Nuestros viajes </h3>
+                    
+                    <p>Estos son los destinos destacados en nuestras propuestas de viajes en Argentina y Chile. </p>
+                    
+                </article>
+
+                <% for( let i = 0; i < products.length; i++ ) { %>
+                    <article>
+                    <a href="/products/<%= products[i].id %>"><%= products[i].productName %></a>
+                    <img src="/images/<%=products[i].images.big %> " alt="Imagen">
+                    </article>
+                <% } %>
+
+            </div>
+            
         </main>
+
+        <%- include('partials/footer') %>
+
 </body>
 
 </html>
