--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -103,7 +103,7 @@
                 <p class="tittle4">Incluye Imprto. PAIS y Percepción RG4815</p>
             </div>
             <div class="reserva">
-                <a href="/views/productCart">RESERVAR</a>
+                <a href="/products/productCart">RESERVAR</a>
             </div>
         </section>
     </main>
