--- a/views/create.ejs
+++ b/views/create.ejs
@@ -85,7 +85,7 @@
                         <input type="text" id="price" name="price" class="form-input" required>
                     </div>
 
-                    <div>
+                    <div class="create-btn">
                         <button type="submit" class="createbutton">Crear producto</button>
                     </div>
                 </div>
