--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -24,7 +24,6 @@
 
             
             <div class="input">
-       
                 <div>
                     <br>
                     <br>
@@ -41,7 +40,8 @@
                     </div>
                     <div>
                         <label for="description" class="form-label">Descripción:</label>
-                        <textarea name="description" id="description" value="<%= product.description %>" class="form-input" required></textarea>
+                        <input type="text" name="description" id="description" value="<%= product.description %>" class="form-input" required></input>
+                        
                         <% if (locals.errors && errors.description) { %> 
                             <div class="text-danger">
                                 <% errors.description.msg %> 
@@ -78,7 +78,7 @@
                     </div>
                     <div>
                         <label for="operatedBy" class="form-label">Operado por:</label>
-                        <input type="text" id="operatedBy" name="operatedBy" value="<%= product.operatedBy %>" class="form-input" required>
+                        <input type="text" id="operatedBy" name="operatedBy" value="<%= product.transports.operatedBy %>" class="form-input" required>
                         <% if (locals.errors && errors.operatedBy) { %> 
                             <div class="text-danger">
                                 <% errors.operatedBy.msg %> 
@@ -87,7 +87,7 @@
                     </div>
                     <div>
                         <label for="hotel" class="form-label">Nombre del hotel:</label>
-                        <input type="text" id="hotel" name="hotel" value="<%= product.hotel %>" class="form-input" required>
+                        <input type="text" id="hotel" name="hotel" value="<%= product.hotels.hotelName %>" class="form-input" required>
                         <% if (locals.errors && errors.hotel) { %> 
                             <div class="text-danger">
                                 <% errors.hotel.msg %> 
@@ -96,7 +96,7 @@
                     </div>
                     <div>
                         <label for="nights" class="form-label">Cantidad de noches:</label>
-                        <input type="text" id="nights" name="nights" value="<%= product.nights %>" class="form-input" required>
+                        <input type="text" id="nights" name="nights" value="<%= product.hotels.nights %>" class="form-input" required>
                         <% if (locals.errors && errors.nights) { %> 
                             <div class="text-danger">
                                 <% errors.nightsmsg %> 
@@ -105,7 +105,7 @@
                     </div>
                     <div>
                         <label for="roomType" class="form-label">Tipo de habitación:</label>
-                        <input type="text" id="roomType" name="roomType" value="<%= product.roomType %>" class="form-input" required>
+                        <input type="text" id="roomType" name="roomType" value="<%= product.hotels.roomType %>" class="form-input" required>
                         <% if (locals.errors && errors.roomType) { %> 
                             <div class="text-danger">
                                 <% errors.roomType.msg %> 
@@ -113,39 +113,24 @@
                         <% } %>
                     </div>
                     <div>
-                        <h4 class="form-input">Actividades:</h4>
+                        <h4 class="form-input">Actividad:</h4>
                         <div>
-                            <label for="activity1" class="form-label">Actividad 1:</label>
-                            <input type="text" id="activity1" name="activity1" value="<%= product.activity1 %>" class="form-input" required>
+                            <label for="activity1" class="form-label">Descripción de la actividad:</label>
+                            <input type="text" id="activity1" name="activity1" value="<%= product.activities.activityName %>" class="form-input" required>
                             <% if (locals.errors && errors.activity1) { %> 
                                 <div class="text-danger">
                                     <% errors.activity1.msg %> 
                                 </div>
                             <% } %>
                         </div>
-                        <div>
-                            <label for="activity2" class="form-label">Actividad 2(Opcional):</label>
-                            <input type="text" id="activity2" name="activity2" value="<%= product.activity2 %>" class="form-input">
-                        </div>
-                        <div>
-                            <label for="activity3" class="form-label">Actividad 3(Opcional):</label>
-                            <input type="text" id="activity3" name="activity3" value="<%= product.activity3 %>" class="form-input">
-                        </div>
                     </div>
                     <div>
                         <h4 class="form-input">Categorías:</h4>
-                            <label for="category"><input type="checkbox" name="category1" id="Destinos" value="Destinos">Destinos</label>
-                            <label for="category"><input type="checkbox" name="category2" id="Estilos" value="Estilos">Estilos de viaje</label>
-                            <label for="category"><input type="checkbox" name="category3" id="Familia" value="Familia">Viajes en familia</label>
-                            <label for="category"><input type="checkbox" name="category4" id="Gastronomico" value="Gastronomico">Viajes gastronómicos</label>
-                            <label for="category"><input type="checkbox" name="category5" id="Trekking" value="Trekking">Trekking y aventura</label>
-                            <label for="category"><input type="checkbox" name="category6" id="Escapadas" value="Escapadas">Escapadas</label>
-                            <label for="category"><input type="checkbox" name="category7" id="EnAuto" value="EnAuto">Viajes en auto</label>
-                            <label for="category"><input type="checkbox" name="category8" id="Romantico" value="Romantico">Escapadas románticas</label>
-                            <label for="category"><input type="checkbox" name="category9" id="Naturaleza" value="Naturaleza">Naturaleza y paisajes</label>
-                            <label for="category"><input type="checkbox" name="category10" id="Patrimonio" value="Patrimonio">Patrimonio y cultura</label>
-                            <label for="category"><input type="checkbox" name="category11" id="Lujos" value="Lujos">Viajes de lujo</label>
-						</select>
+                            <select name="category_id" id="category_id" required>
+                                <% allCategories.forEach( category => { %>
+                                <option value="<%= category.id %>"><% if (product.categories.id == category.id) { %><%= 'Elegido:' %><% }; %><%= product.categories.categoryName %></option>
+                                <% }); %>
+                            </select>
                     </div>
                     <div>
                         <label for="price" class="form-label">Precio del producto:</label>
