--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                 <% for( let i = 0; i < products.length; i++ ) { %>
                     <article>
                     <a href="/products/<%= products[i].id %>"><%= products[i].productName %></a>
-                    <img src="/images/<%=products[i].images.big %> " alt="Imagen">
+                    <img src="/images/<%=products[i].bigImg %> " alt="Imagen">
                     </article>
                 <% } %>
 
