--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -17,15 +17,15 @@
         <section>
             <div class="conteiner">
                 <div class="column1">
-                    <img src="/images/<%=products.images.big%>" alt="">
+                    <img src="/images/<%=products.bigImg%>" alt="">
                 </div>
                 <div class="column2">
                     <div class="row1">
-                        <img src="/images/<%= products.images.medium%>" alt="">
+                        <img src="/images/<%= products.mediumImg%>" alt="">
                     </div>
                     <div class="row2">
-                        <img src="/images/<%= products.images.small1%>" alt="">
-                        <img src="/images/<%= products.images.small2%>" alt="">
+                        <img src="/images/<%= products.small1Img%>" alt="">
+                        <img src="/images/<%= products.small2Img%>" alt="">
                     </div>
                 </div>
             </div>
@@ -52,11 +52,10 @@
             </div>
             <article class="box1">
                 <div class="input">
-                    <p class="tittle"><i class="fa-solid fa-plane"></i>
-                        <%= products.transports.transportName %>
-                    </p>
-                    <p class="subtittle">| Operado por <%= products.transports.operatedBy %>
-                    </p>
+
+                    <p class="tittle"><i class="fa-solid fa-plane"></i> Vuelo </p>
+                    <p class="subtittle">| Operado por <%= products.operatedBy %></p>
+
                 </div>
                 <p class="top">Ida xx/xx</p>
                 <a href="" class="button2">Ver detalles</a>
@@ -66,11 +65,11 @@
                 <div class="input">
                     <p class="tittle"><i class="fa-solid fa-hotel"></i> Alojamiento</p>
                     <p class="subtittle">
-                        <%= products.hotels.nights %> noches
+                        <%= products.nights %> noches
                     </p>
                 </div>
                 <p class="top">
-                    <%= products.hotels.hotelName %>
+                    <%= products.hotelName %>
                 </p>
                 <a href="" class="button2">Ver alojamiento</a>
                 <p class="bottom light">
@@ -80,7 +79,7 @@
             <article class="box1">
                 <p class="tittle"><i class="fa-regular fa-map"></i>Actividad</p>
                 <p class="top">
-                    <%=products.activities.activityName %>
+                    <%=products.activityName %>
                 </p>
                 
                 </p>
