--- a/views/create.ejs
+++ b/views/create.ejs
@@ -27,16 +27,11 @@
                     </div>
                     <div>
                         <label for="bigImg" class="form-label">Carga la imagen de tu producto(872x497):</label>
-                        <input type="file" name="bigImg" accept=".jpg" accept=".png" id="bigImg" class="form-input">
+                        <input type="file" name="bigImg" accept=".jpg" accept=".png" id="bigImg" class="form-input" required>
                         <label for="mediumImg" class="form-label">Carga la imagen de tu producto(746x312):</label>
                         <input type="file" name="mediumImg" accept=".jpg" accept=".png" id="mediumImg"
-                            class="form-input">
-                        <label for="little1Img" class="form-label">Carga la imagen de tu producto(372x187):</label>
-                        <input type="file" name="little1Img" accept=".jpg" accept=".png" id="little1Img"
-                            class="form-input">
-                        <label for="little2Img" class="form-label">Carga la imagen de tu producto(372x187):</label>
-                        <input type="file" name="little2Img" accept=".jpg" accept=".png" id="little2Img"
-                            class="form-input">
+                            class="form-input" required>
+                        
                     </div>
                     
                     <div>
