--- a/views/user.ejs
+++ b/views/user.ejs
@@ -15,11 +15,11 @@
     <main>
         <h1>Hola, <%= user.firstName %> </h1>
         <br>
-        <img src="/images/avatars/<%= user.image %> " alt="Foto de perfil">
+        <img src="/images/avatars/<%= user.avatar %> " height="180" width="200" alt="Foto de perfil">
         <br>
         <h1>Correo electronico: <%= user.email %> </h1>
         <br>
-        <h1>Categoria: <%= user.category %> </h1>
+        <h1>Categoria: <%= user.userRole %> </h1>
     </main>
     <br>
     <br>
