--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,16 +13,16 @@
 </head>
 
 <body>
-    <form action="/user/without-login" method="POST" id="form" enctype="multipart/form-data">
+    <form action="/users/register" method="POST" id="form" enctype="multipart/form-data">
         <div class="form">
             <h1>Crea tu cuenta</h1>
             <div class="grupo">
-                <input type="text" name="name" id="name" required><span class="barra"></span>
-                <label for="FirstName"> Nombre</label>
+                <input type="text" name="firstName" id="firstName" required><span class="barra"></span>
+                <label for="firstName"> Nombre</label>
             </div>
             <div class="grupo">
-                <input type="text" name="name" id="name" required><span class="barra"></span>
-                <label for="LastName"> Apellido</label>
+                <input type="text" name="lastName" id="lastName" required><span class="barra"></span>
+                <label for="lastName"> Apellido</label>
             </div>
             <div class="grupo">
                 <input type="email" name="email" id="name" required><span class="barra"></span>
@@ -36,8 +36,8 @@
             </div>
 
             <div class="grupo">
-                <label for="user"> Elige una categoria</label>
-                <select name="user" id="user">
+                <label for="userRole"> Elige una categoria</label>
+                <select name="userRole" id="userRole">
                     <option value="usuario">Usuario </option>
                     <option value="admin">Admin </option>
                 </select>
@@ -48,20 +48,8 @@
             </div>
 
             <button type="submit"> Registrate</button>
-            <p>Al registrarse aceptas los <a href="">Terminos y Condiciones</a></p>
         </div>
-
-        <h4>Ingresá con un sólo paso.</h4>
-
-        <div class="botones">
-            <button type="button"> <a href=""><i class="fa-brands fa-facebook"></i>Ingresar con Facebook</a></button>
-            <button type="button"> <a href=""><i class="fa-brands fa-google"></i>Ingresar con Google</a></button>
-            <button type="button"> <a href=""><i class="fa-brands fa-apple"></i>Ingresar con Apple</a></button>
-        </div>
-        <h4>¿Ya tenés cuenta?</h4>
-        <div class="ingresar">
-            <button type="button">Ingresar</button>
-        </div>
+        
     </form>
     </main>
 </body>
