--- a/public/css/register.css
+++ b/public/css/register.css
@@ -108,3 +108,18 @@ form .ingresar button {
     font-size: 20px;
     background-color: #fff;
 }
+
+.invalid {
+    border: solid 1px red;
+    box-shadow: 0 0 10px red
+}
+
+.error {
+    color: red;
+    display: block;
+}
+
+.valid {
+    border: solid 1px green;
+    box-shadow: 0 0 10px green
+}
