--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -31,31 +31,18 @@
                     <br>
                     <div>
                         <label for="productName" class="form-label">Nombre del producto:</label>
-                        <input type="text" id="productName" name="productName" class="form-input" value="<%= product.productName %>" required>
-                        <% if (locals.errors && errors.productName) { %> 
-                            <div class="text-danger">
-                                <% errors.productName.msg %> 
-                            </div>
-                        <% } %>  
+                        <input type="text" id="productName" name="productName" class="form-input" value="<%= product.productName %>" >
+                        <div class=' <%= locals.errors && errors.productName ? 'text-danger' : null  %> '><%= locals.errors && errors.productName ? errors.productName.msg : null %></div>
                     </div>
                     <div>
                         <label for="description" class="form-label">Descripción:</label>
-                        <input type="text" name="description" id="description" value="<%= product.description %>" class="form-input" required></input>
-                        
-                        <% if (locals.errors && errors.description) { %> 
-                            <div class="text-danger">
-                                <% errors.description.msg %> 
-                            </div>
-                        <% } %>
-                    </div>
+                        <input type="text" name="description" id="description" value="<%= product.description %>" class="form-input" ></input>
+                        <div class=' <%= locals.errors && errors.description ? 'text-danger' : null  %> '><%= locals.errors && errors.description ? errors.description.msg : null %></div>
                     <div>
                         <label for="bigImg" class="form-label">Carga la imagen de tu producto(872x497):</label>
                         <input type="file" name="bigImg" accept=".jpg" accept=".png" id="bigImg" class="form-input">
-                        <% if (locals.errors && errors.bigImg) { %> 
-                            <div class="text-danger">
-                                <% errors.bigImg.msg %> 
-                            </div>
-                        <% } %>
+                        <div class=' <%= locals.errors && errors.bigImg ? 'text-danger' : null  %> '><%= locals.errors && errors.bigImg ? errors.bigImg.msg : null %></div>
+
                         <label for="mediumImg" class="form-label">Carga la imagen de tu producto(746x312):</label>
                         <input type="file" name="mediumImg" accept=".jpg" accept=".png" id="mediumImg" class="form-input">
                         
@@ -63,50 +50,34 @@
                     
                     <div>
                         <label for="operatedBy" class="form-label">Operado por:</label>
-                        <input type="text" id="operatedBy" name="operatedBy" value="<%= product.operatedBy %>" class="form-input" required>
-                        <% if (locals.errors && errors.operatedBy) { %> 
-                            <div class="text-danger">
-                                <% errors.operatedBy.msg %> 
-                            </div>
-                        <% } %>
+                        <input type="text" id="operatedBy" name="operatedBy" value="<%= product.operatedBy %>" class="form-input" >
+                        <div class=' <%= locals.errors && errors.operatedBy ? 'text-danger' : null  %> '><%= locals.errors && errors.operatedBy ? errors.operatedBy.msg : null %></div>
+
                     </div>
                     <div>
                         <label for="hotel" class="form-label">Nombre del hotel:</label>
-                        <input type="text" id="hotel" name="hotel" value="<%= product.hotelName %>" class="form-input" required>
-                        <% if (locals.errors && errors.hotel) { %> 
-                            <div class="text-danger">
-                                <% errors.hotel.msg %> 
-                            </div>
-                        <% } %>
+                        <input type="text" id="hotel" name="hotel" value="<%= product.hotelName %>" class="form-input" >
+                        <div class=' <%= locals.errors && errors.hotelName ? 'text-danger' : null  %> '><%= locals.errors && errors.hotelName ? errors.hotelName.msg : null %></div>
+
                     </div>
                     <div>
                         <label for="nights" class="form-label">Cantidad de noches:</label>
-                        <input type="text" id="nights" name="nights" value="<%= product.nights %>" class="form-input" required>
-                        <% if (locals.errors && errors.nights) { %> 
-                            <div class="text-danger">
-                                <% errors.nightsmsg %> 
-                            </div>
-                        <% } %>
+                        <input type="text" id="nights" name="nights" value="<%= product.nights %>" class="form-input" >
+                        <div class=' <%= locals.errors && errors.nights ? 'text-danger' : null  %> '><%= locals.errors && errors.nights ? errors.nights.msg : null %></div>
+
                     </div>
                     <div>
                         <label for="roomType" class="form-label">Tipo de habitación:</label>
-                        <input type="text" id="roomType" name="roomType" value="<%= product.roomType %>" class="form-input" required>
-                        <% if (locals.errors && errors.roomType) { %> 
-                            <div class="text-danger">
-                                <% errors.roomType.msg %> 
-                            </div>
-                        <% } %>
+                        <input type="text" id="roomType" name="roomType" value="<%= product.roomType %>" class="form-input" >
+                        <div class=' <%= locals.errors && errors.roomType ? 'text-danger' : null  %> '><%= locals.errors && errors.roomType ? errors.roomType.msg : null %></div>
+
                     </div>
                     <div>
                         <h4 class="form-input">Actividad:</h4>
                         <div>
                             <label for="activityName" class="form-label">Descripción de la actividad:</label>
-                            <input type="text" id="activityName" name="activityName" value="<%= product.activityName %>" class="form-input" required>
-                            <% if (locals.errors && errors.activityName) { %> 
-                                <div class="text-danger">
-                                    <% errors.activityName.msg %> 
-                                </div>
-                            <% } %>
+                            <input type="text" id="activityName" name="activityName" value="<%= product.activityName %>" class="form-input" >
+                            <div class=' <%= locals.errors && errors.activityName ? 'text-danger' : null  %> '><%= locals.errors && errors.activityName ? errors.activityName.msg : null %></div>
                         </div>
                     </div>
                     <div>
@@ -119,12 +90,8 @@
                     </div>
                     <div>
                         <label for="price" class="form-label">Precio del producto:</label>
-                        <input type="text" id="price" name="price" value="<%= product.price %>"  class="form-input"required>
-                        <% if (locals.errors && errors.price) { %> 
-                            <div class="text-danger">
-                                <% errors.price.msg %> 
-                            </div>
-                        <% } %>
+                        <input type="text" id="price" name="price" value="<%= product.price %>"  class="form-input">
+                        <div class=' <%= locals.errors && errors.price ? 'text-danger' : null  %> '><%= locals.errors && errors.price ? errors.price.msg : null %></div>
                     </div>
 
             </div>
