--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,22 +17,25 @@
         <div class="form">
             <h1>Crea tu cuenta</h1>
             <div class="grupo">
-                <input type="text" name="firstName" id="firstName" required><span class="barra"></span>
+                <input type="text" name="firstName" id="firstName" ><span class="barra"></span>
                 <label for="firstName"> Nombre</label>
+                <div class=' <%= locals.errors && errors.firstName ? 'text-danger' : null  %> '><%= locals.errors && errors.firstName ? errors.firstName.msg : null %></div>
             </div>
             <div class="grupo">
-                <input type="text" name="lastName" id="lastName" required><span class="barra"></span>
+                <input type="text" name="lastName" id="lastName" ><span class="barra"></span>
                 <label for="lastName"> Apellido</label>
+                <div class=' <%= locals.errors && errors.lastName ? 'text-danger' : null  %> '><%= locals.errors && errors.lastName ? errors.lastName.msg : null %></div>
             </div>
             <div class="grupo">
-                <input type="email" name="email" id="name" required><span class="barra"></span>
+                <input type="email" name="email" id="name" ><span class="barra"></span>
                 <label for="email">Email</label>
-                <p><i class="fa-solid fa-circle-info"></i>Accedé con el mail que realizaste la compra</p>
+                <div class=' <%= locals.errors && errors.email ? 'text-danger' : null  %> '><%= locals.errors && errors.email ? errors.email.msg : null %></div>
             </div>
             <div class="grupo">
-                <input type="password" name="password" id="name" required><span class="barra"></span>
+                <input type="password" name="password" id="name" ><span class="barra"></span>
                 <label for="password">Contraseña</label>
                 <p>Usá entre 8 y 16 carácteres</p>
+                <div class=' <%= locals.errors && errors.password ? 'text-danger' : null  %> '><%= locals.errors && errors.password ? errors.password.msg : null %></div>
             </div>
 
             <div class="grupo">
@@ -43,9 +46,9 @@
                 </select>
             </div>
             <div class="grupo">
-                <label for="image" class="">Carga tu foto perfil</label>
-                <input type="file" name="image" accept=".jpg" accept=".png" id="image" class="">
-            </div>
+                <label for="avatar" class="">Carga tu foto perfil</label>
+                <input type="file" name="avatar" id="image" class="">
+                
 
             <button type="submit"> Registrate</button>
         </div>
