--- a/views/register.ejs
+++ b/views/register.ejs
@@ -48,8 +48,8 @@
             <div class="grupo">
                 <label for="avatar" class="">Carga tu foto perfil</label>
                 <input type="file" name="avatar" id="image" class="">
-                
-
+                <div class=' <%= locals.errors && errors.avatar ? 'text-danger' : null  %> '><%= locals.errors && errors.avatar ? errors.avatar.msg : null %></div>
+            </div>
             <button type="submit"> Registrate</button>
         </div>
         
